integration_tests/codegen_fail/fail/input-object/derive_no_fields.stderr
error: GraphQL input object expects at least one field
 --> $DIR/derive_no_fields.rs:2:1
  |
2 | struct Object {}
  | ^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Input-Objects
